--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,6 +2,10 @@ name: learn-github-actions
 
 on: [push]
 
+env:
+  USERS: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/test-driven-users:prod
+  CLIENT: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/test-driven-client:prod 
+
 jobs:
   
   build:
@@ -14,4 +18,25 @@ jobs:
         run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull Images
+        run: |
+          docker pull ${{ env.USERS }} || true
+          docker pull ${{ env.CLIENT }} || true
+      - name: Build Images
+        run: |
+          docker build \
+            --file services/users/Dockerfile.prod \
+            --tag ${{ env.USERS }} \
+            "./services/users"
+          docker build \
+            --file services/client/Dockerfile.prod \
+            --tag ${{ env.CLIENT }} \
+            --build-arg NODE_ENV=production \
+            --build-arg REACT_APP_API_SERVICE_URL=$REACT_APP_API_SERVICE_URL \
+            "./services/client"
+      - name: Push Images
+        run: |
+          docker push ${{ env.USERS }}
+          docker push ${{ env.CLIENT }}
+
 
