--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,7 +5,7 @@ on: [push]
 env:
   USERS: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/test-driven-users:prod
   CLIENT: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/test-driven-client
-  REACT_APP_API_SERVICE_URL: "http://localhost:5004"
+  REACT_APP_API_SERVICE_URL: "http://flask-react-alb-2036598675.us-east-1.elb.amazonaws.com"
 
 jobs:
   
