--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ env:
   USERS: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/test-driven-users:prod
   CLIENT: docker.pkg.github.com/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/test-driven-client
   REACT_APP_API_SERVICE_URL: "http://flask-react-alb-2036598675.us-east-1.elb.amazonaws.com"
+  AWS_RDS_URI: "postgres://webapp:GyfGGZy4Il0A3NvIH3Hw@flask-react-db.ctffmwo1n6aa.us-east-1.rds.amazonaws.com:5432/api_prod" 
+  PRODUCTION_SECRET_KEY: "3542523a19ae1bd634ad6b2788e94071e7c7368615bfe8d0"
 
 jobs:
   
@@ -65,7 +67,7 @@ jobs:
           chmod +x ./deploy.sh
           ./deploy.sh
         env:
-          AWS_RDS_URI: ${{ secrets.AWS_RDS_URI }}
-          PRODUCTION_SECRET_KEY: ${{ secrets.PRODUCTION_SECRET_KEY }}
+          AWS_RDS_URI: ${{ env.AWS_RDS_URI }}
+          PRODUCTION_SECRET_KEY: ${{ env.PRODUCTION_SECRET_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
