fixed typo in line 58, missing 'run' command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
           docker pull ${{ env.CLIENT }}:builder || true
           docker pull ${{ env.CLIENT }}:prod || true
       - name: Build prod images
+        run: |
           echo "Building prod images..."
           docker build \
             --cache-from ${{ env.USERS }} \
