--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   
-  build:
+  build_and_test:
     name: Build & Test Dev Images
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +41,7 @@ jobs:
 
   build_prod:
     name: Build & Push Prod Images
+    needs: build_and_test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout master
@@ -84,8 +85,9 @@ jobs:
 
 
   deploy:
-    name: Deploy to prod 
+    name: Deploy to prod
     runs-on: ubuntu-latest
+    needs: [build_and_test, build_prod]
     steps:
       - name: Checkout master
         uses: actions/checkout@v2.3.4
