--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           docker pull ${{ env.CLIENT }}:prod || true
       - name: Build Images
         run: |
-          echo "Building and testing dev images..."
+          echo "Building and testing dev images.."
           docker-compose up --detach --build
           docker-compose exec -T api python -m pytest "src/tests" -p no:warnings --cov="src"
           docker-compose exec -T api flake8 src
