--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,14 +114,14 @@ jobs:
             cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       - name: Terraform Format
         id: fmt
-        run: terraform fmt -check
+        run: terraform fmt -check terraform
       - name: Terraform Init 
         id: init
-        run: terraform init
+        run: terraform init terraform
       - name: Terraform Plan 
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan -no-color
+        run: terraform plan -no-color terraform
         continue-on-error: true
       - name: Update Pull Request
         uses: actions/github-script@0.9.0
@@ -150,4 +150,4 @@ jobs:
         run: exit 1
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve terraform
