--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,7 @@ jobs:
   deploy:
     name: Deploy to prod
     runs-on: ubuntu-latest
-    needs: [build_and_test, build_prod]
+    # needs: [build_and_test, build_prod]
     steps:
       - name: Checkout master
         uses: actions/checkout@v2.3.4
